--- a/ValueTypes/Test/Peregrine.ValueTypes.Test.fsproj
+++ b/ValueTypes/Test/Peregrine.ValueTypes.Test.fsproj
@@ -20,7 +20,8 @@
     <PackageReference Include="FsUnit" Version="3.4.0" />
     <PackageReference Include="NUnit" Version="3.11.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.0.1" /> 
-    <PackageReference Include="NUnit3TestAdapter" Version="3.13.0" /> 
+    <PackageReference Include="NUnit3TestAdapter" Version="3.13.0" />
+    <PackageReference Include="Appveyor.TestLogger" Version="2.0.0" />
   </ItemGroup>
 
   <ItemGroup>
