--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,5 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <PropertyGroup>
+    <PlatformTarget>x64</PlatformTarget>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <WarningLevel>4</WarningLevel>
+    <Tailcalls>true</Tailcalls>
+    <Company>GResearch Ltd</Company>
+    <Authors />
+    <Copyright>Copyright © GResearch Ltd</Copyright>
+  </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Nerdbank.GitVersioning">
       <Version>2.3.138</Version>
