--- a/ValueTypes/Bench/Peregrine.ValueTypes.Bench.fsproj
+++ b/ValueTypes/Bench/Peregrine.ValueTypes.Bench.fsproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Appveyor.TestLogger" Version="2.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.0.1" />
     <PackageReference Include="NBench" Version="1.2.2" />
     <DotNetCliToolReference Include="dotnet-nbench" Version="1.2.2" />
