--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,8 +8,10 @@ build:
   verbosity: minimal
 after_build:
 - ps: dotnet pack
-test_script:
-- ps: dotnet test --no-build --no-restore --logger:Appveyor
+- ps: >-
+    dotnet test --no-build --no-restore --logger:Appveyor
+
+    dotnet nbench
 artifacts:
 - path: '**\*.nupkg'
   name: NuGet packages
