--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,9 +7,9 @@ build:
   project: Peregrine.sln
   verbosity: minimal
 after_build:
-- ps: dotnet pack
+- ps: dotnet pack --no-build
 test_script:
-- ps: dotnet test --no-build --no-restore --logger:Appveyor
+- ps: dotnet test --no-build --logger:Appveyor
 - ps: cd ValueTypes\Bench
 - ps: dotnet nbench
 artifacts:
