--- a/ValueTypes/Peregrine.ValueTypes.fsproj
+++ b/ValueTypes/Peregrine.ValueTypes.fsproj
@@ -18,6 +18,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="FSharp.Core" Version="4.6.2" />
+    <PackageReference Update="FSharp.Core" Version="4.5.2" />
   </ItemGroup>
 </Project>
