--- a/ValueTypes/Bench/Peregrine.ValueTypes.Bench.fsproj
+++ b/ValueTypes/Bench/Peregrine.ValueTypes.Bench.fsproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="Appveyor.TestLogger" Version="2.0.0" />
+    <PackageReference Update="FSharp.Core" Version="4.5.2" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.0.1" />
     <PackageReference Include="NBench" Version="1.2.2" />
     <DotNetCliToolReference Include="dotnet-nbench" Version="1.2.2" />
