Move our allocation free testing to NBench (#8)
* First pass

* Version 2 of the ValueSeq API

* Added ValueSeq.map

* Moved allocation testing to a separate project and am now using NBench rather than BenchmarkDotNet.

* Fixed Appveyor to run NBench

* Fix NBench running

* Don't build 3 times!

* Refine the API; bump to version 2

* First pass

* Version 2 of the ValueSeq API

* Correctly reference the explicit version of FSharp.Core that we want

* Use explicit version of FSharp.Core

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,9 +7,11 @@ build:
   project: Peregrine.sln
   verbosity: minimal
 after_build:
-- ps: dotnet pack
+- ps: dotnet pack --no-build
 test_script:
-- ps: dotnet test --no-build --no-restore --logger:Appveyor
+- ps: dotnet test --no-build --logger:Appveyor
+- ps: cd ValueTypes\Bench
+- ps: dotnet nbench
 artifacts:
 - path: '**\*.nupkg'
   name: NuGet packages
