Change NuGet package name to PeregrineValueTypes

--- a/ValueTypes/Peregrine.ValueTypes.fsproj
+++ b/ValueTypes/Peregrine.ValueTypes.fsproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <PackageId>PeregrineValueTypes</PackageId>
     <Description>F# library for dealing with value types with the specific goal of writing allocation free F# code</Description>
     <PackageTags>g-research;gresearch;F#;.net;value-types;allocation-free</PackageTags>
     <PackageProjectUrl>https://github.com/G-Research/Peregrine</PackageProjectUrl>
